--- a/resume.html
+++ b/resume.html
@@ -448,7 +448,7 @@
       <div class="timeline-item">
         <span class="timeline-date">2021 - 2025</span>
         <h4 class="timeline-title">Bachelor in Business Information Technology</h4>
-        <span class="timeline-subtitle">University Name</span>
+        <span class="timeline-subtitle">University of Embu</span>
         <p class="timeline-description">
           Specialized in cybersecurity and information systems with coursework in network security, 
           ethical hacking, and digital forensics.
