--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       --nav-bg: rgba(18, 18, 18, 0.95);
       --shadow-color: rgba(0, 255, 170, 0.3);
       --transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+      --navbar-height: 80px;
     }
 
     * {
@@ -54,6 +55,7 @@
     .navbar {
       background: var(--nav-bg);
       padding: 1.2rem 2rem;
+      height: var(--navbar-height);
       display: flex;
       justify-content: center;
       box-shadow: 0 2px 10px rgba(0,0,0,0.5);
@@ -127,7 +129,8 @@
 
     /* Hero Section */
     .home-section {
-      min-height: 100vh;
+      min-height: calc(100vh - var(--navbar-height));
+      padding-top: var(--navbar-height);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -321,6 +324,16 @@
         gap: 1rem;
       }
 
+      .navbar {
+        padding: 1rem;
+        height: auto;
+      }
+
+      .home-section {
+        padding-top: 120px; /* Adjusted for stacked navbar */
+        min-height: calc(100vh - 120px);
+      }
+
       h1 {
         font-size: 2rem;
       }
@@ -347,6 +360,7 @@
       .btn {
         width: 100%;
         justify-content: center;
+        margin: 0;
       }
     }
 
@@ -362,6 +376,10 @@
 
       .tagline {
         font-size: 1rem;
+      }
+
+      .home-content {
+        padding: 1rem;
       }
     }
   </style>
