--- a/resume.html
+++ b/resume.html
@@ -436,7 +436,7 @@
 
     <!-- Download CV Button -->
     <div class="btn-container" data-aos="fade-up" data-aos-delay="100">
-      <a href="/files/marcos_solomon_CS-SA10-25038.pdf" download class="download-btn">
+      <a href="/files/Marcos_Solomon_CV (2).pdf" download class="download-btn">
         <i class="fas fa-download"></i> Download Full Resume (PDF)
       </a>
     </div>
